base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
spec:
  selector:
    matchLabels:
      app: backend
      component: api
  template:
    metadata:
      labels:
        app: backend
        component: api
    spec:
      containers:
        - name: api
          image: nginx:latest
          ports:
            - containerPort: 80
