base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api-svc
spec:
  type: NodePort
  ports:
    - port: 80
  selector:
    app: backend
    component: api
